<resources>


    <!-- Fragment Names -->

    <!-- Dialog Names -->
    <string name="dialog_select_image">SelectImage</string>

    <!-- Old strings -->
    <string name="app_name">АЛФ РБ</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="login_button">войти</string>
    <string name="reject">ОТМЕНА</string>
    <string name="ok">ОК</string>
    <string name="title_tournament">Турниры</string>
    <string name="title_club">Клубы</string>
    <string name="title_players">Игроки</string>
    <string name="title_ads">Объявления</string>
    <string name="title_ads2">ОБЪЯВЛЕНИЯ</string>
    <string name="title_news">Новости</string>
    <string name="title_news2">НОВОСТИ</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="tournamentStatusFinish">Завершен</string>
    <string name="tournamentTitle">Кубок Бурятии по мини-футболу. Первый этап. Золотая лига</string>
    <string name="tournamentDate">27.01.2018–28.02.2018</string>
    <string name="tournamentCommandNum">Количество команд:</string>
    <string name="tournamentInfoTimetable">Расписание</string>
    <string name="tournamentInfoPlayers">Игроки</string>
    <string name="tournamentInfoCommand">Команды</string>
    <string name="newsSomeTitle">В мире футбола чето там изменилось. Вау. Как неожиданно. Так интересно</string>
    <string name="newsSomeDate">27.01.18</string>
    <string name="playerInv">Пригласить игрока</string>
    <string name="createClub">Создать клуб</string>
    <string name="advertisingTitle">СПОНСОР</string>
    <string name="tournamentFilterCommandNum">Количество команд</string>
    <string name="showAllNews">Показать все новости</string>
    <string name="showAllAds">Показать все объявления</string>
    <string name="tournamentTime">13:30</string>
    <string name="tournamentStadium">Не назначено</string>
    <string name="matchStatus">Статус</string>
    <string name="tournamentCommandTitle1">Лара</string>
    <string name="myCommands">Мои команды</string>
    <string name="userCommandFilter">Показать:</string>
    <string name="myCommands2">Команды</string>
    <string name="myCommands3">Тренерство</string>
    <string name="commandPlayer">Игрок</string>
    <string name="commandPlayer2">Игрок:</string>
    <string name="commandAbbrev1">№ - Место в турнире</string>
    <string name="commandAbbrev2">РМ - Разница забитых и пропущенных мячей</string>
    <string name="commandAbbrev3">О - Количество очков</string>
    <string name="commandAbbreviation1">И - Количество проведенных матчей</string>
    <string name="commandAbbreviation2">Г - Количество забитых мячей</string>
    <string name="commandAbbreviation3">ЖК - Количество действующих желтых карточек</string>
    <string name="commandAbbreviation5">Д - Количество действующих дисквалификаций на будущие матчи</string>
    <string name="title_activity_command_info">CommandInfoActivity</string>
    <string name="allNewsButton">Все новости</string>
    <string name="search">Поиск по игрокам …</string>
    <string name="searchTourneys">Поиск по турнирам …</string>
    <string name="back">Назад</string>
    <string name="changeProfile">Редактировать профиль</string>
    <string name="changeCommand">Редактировать команду</string>
    <string name="teamMatches">Матчи команды</string>
    <string name="editClub">Редактировать клуб</string>
    <string name="protocol">Протокол</string>
    <string name="setReferee">Назначить на матчи</string>
    <string name="editProtocol">Редактировать протокол</string>
    <string name="confirmProtocol">Обзор матча</string>
    <string name="editProtocolResponsiblePersons">Ответственные лица</string>
    <string name="protocolScore">Текущий счет</string>
    <string name="addEvent">Добавить событие</string>
    <string name="agreement">Авторизуясь, вы соглашаетесь на обработку ваших персональных данных</string>
    <string name="score">Счет</string>
    <string name="finalScore">Итоговый счет</string>
    <string name="event3">Событие</string>
    <string name="event2">События</string>
    <string name="half">Тайм:</string>
    <string name="name">Имя</string>
    <string name="nameProfile">Имя:</string>
    <string name="surname">Фамилия</string>
    <string name="surnameProfile">Фамилия:</string>
    <string name="patronymic">Отчество</string>
    <string name="patronymicProfile">Отчество:</string>
    <string name="DOB">Дата рождения</string>
    <string name="DOBProfile">Дата рождения:</string>
    <string name="login">Логин</string>
    <string name="loginProfile">Логин:</string>
    <string name="pass">Пароль</string>
    <string name="passProfile">Пароль:</string>
    <string name="coach">Тренер:</string>
    <string name="coach2">Тренер</string>
    <string name="invitation">Приглашения на турнир</string>
    <string name="userCommandInfoPlayersNum">Количество игроков:</string>
    <string name="emptyClubs">НЕТ ПРИГЛАШЕНИЙ</string>
    <string name="referees">Судьи</string>
    <string name="refereeSettings">Назначить судей</string>
    <string name="refereeSettings2">Назначить на матчи</string>
    <string name="inspector">Инспектор:</string>
    <string name="inspector2">Инспектор</string>
    <string name="referee1_2">1-й судья</string>
    <string name="referee1">1-й судья:</string>
    <string name="referee2_2">2-й судья</string>
    <string name="referee2">2-й судья:</string>
    <string name="referee3">3-й судья:</string>
    <string name="referee3_2">3-й судья</string>
    <string name="abbrev1">Г - гол</string>
    <string name="abbrev2">А - автогол</string>
    <string name="abbrev3">Ф - фол</string>
    <string name="abbrev4">КК - красная карточка</string>
    <string name="abbrev5">ЖК - желтая карточка</string>
    <string name="abbrev6">Д - дисквалификация</string>
    <string name="you">Вы</string>
    <string name="fouls">Фолы</string>
    <string name="ownGoals">Автоголы</string>
    <string name="penalty">Пенальти</string>
    <string name="referee4_2">Хронометрист</string>
    <string name="referee4">Хронометрист:</string>
    <string name="matches">Матчи</string>
    <string name="commands">Команды</string>
    <string name="createCommand">Создать команду</string>
    <string name="tournament">Турнир:</string>
    <string name="club2">Клуб:</string>
    <string name="num">№:</string>
    <string name="commandTitle">Название команды:</string>
    <string name="commandTitle2">Название команды</string>
    <string name="structure">Состав</string>
    <string name="editTeam">Редактирование команды</string>
    <string name="teamsMatches">Посмотреть матчи</string>
    <string name="players">Игроки</string>
    <string name="players_not_found">Нет игроков</string>
    <string name="network_error">Ошибка, проверьте подключение к сети</string>

    <string name="buttonOk">Принять</string>
    <string name="buttonCancel">Отклонить</string>
    <string name="playersInv">Приглашенные игроки</string>
    <string name="title">Название:</string>
    <string name="title2">Название</string>
    <string name="desc">Описание:</string>
    <string name="desc2">Описание</string>
    <string name="addPlayer">Добавить игрока</string>
    <string name="showProtocol">Показать протокол</string>
    <string name="empty">Ничего нет</string>
    <string name="empty2">Не назначено</string>
    <string name="not_inv">Здесь будут отображаться приглашения от команд</string>
    <string name="not_league_matches">Здесь будут отображаться матчи</string>
    <string name="not_league_commands">Здесь будут отображаться команды</string>
    <string name="not_league_players">Здесь будут отображаться игроки</string>
    <string name="not_leagues">Вы пока не заявлены ни на один турнир</string>
    <string name="not_club">Вы пока не состоите ни в одном клубе</string>
    <string name="not_command">Вы пока не участвуете ни в одной команде</string>
    <string name="not_match">Для Вас пока нет ближайших матчей</string>
    <string name="no_fav_tourneys">У вас пока нет избранных турниров</string>
    <string name="no_team_matches">Для вашей команды пока нет матчей</string>
    <string name="not_matches">Пока нет утвержденных матчей</string>
    <string name="not_coming_match">На этой неделе нет матчей</string>
    <string name="not_event">В этом матче еще ничего не произошло</string>
    <string name="title_protocol">Протокол</string>


    <string name="commandRules">Для участия в турнире команда должна включать минимум 5 игроков. Добавить игроков можно в разделе \"Игроки\" или в разделе \"Команды\" профиля.</string>
    <string-array name="spinnerItem">
        <item>по проведенным матчам</item>
        <item>по забитым мячам</item>
        <item>по количеству ЖК</item>
        <item>по количеству КК</item>
    </string-array>
    <string name="splash">splash</string>
    <string name="createTournament">Создание турнира</string>
    <string name="region">Регион</string>
    <string name="trainer">Тренер</string>
    <string name="numberTrainer">Номер тренера</string>
    <string name="ChoosePhotoFromGalary">Выбрать фото</string>
    <string name="OpenCamera">Открыть камеру</string>
    <string name="ProtocolToSend">Протокол</string>
    <string name="editTeamTrainer">Тренер:</string>
    <string name="editTeamNumber">Контактные данные:</string>
    <string name="content_description_image">Изображение</string>
    <string name="content_description_button_add">Кнопка добавить игрока</string>
    <string name="allTourneys">Все турниры</string>

    <string name="someDescription">SomeDescription</string>
    <string name="Not_chosen">Не выбрано</string>
</resources>
