<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/registrationInfoPhoto"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_add_photo"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="12sp"
                android:text="@string/surnameProfile"/>
            <EditText
                android:id="@+id/registrationInfoSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyEditText"
                android:hint="@string/surname"
                android:inputType="text|textCapWords"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="12sp"
                android:text="@string/nameProfile"/>
            <EditText
                android:id="@+id/registrationInfoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyEditText"
                android:hint="@string/name"
                android:inputType="text|textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="12sp"
                android:text="@string/patronymicProfile"/>
            <EditText
                android:id="@+id/registrationInfoPatronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyEditText"
                android:hint="@string/patronymic"
                android:inputType="text|textCapWords"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="12sp"
                android:text="@string/loginProfile"/>
            <EditText
                android:id="@+id/registrationInfoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyEditText"
                android:hint="@string/login"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="12sp"
                android:text="@string/passProfile"/>
            <EditText
                android:id="@+id/registrationInfoPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyEditText"
                android:hint="@string/pass"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="12sp"
                android:text="@string/DOBProfile"/>
            <TextView
                android:id="@+id/registrationInfoDOB"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4sp"
                android:layout_width="match_parent"
                android:gravity="center_vertical|bottom"
                android:layout_height="34dp"
                android:fontFamily="@font/manrope_regular"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/colorLightGrayForText"
                android:text="@string/DOB"/>
            <View
                android:layout_width="match_parent"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="55sp"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"
                />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>