<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">


                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5sp"
                    android:text="@string/commandAbbrev1"
                    android:textSize="15sp" />

                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5sp"
                    android:text="@string/commandAbbreviation1"
                    android:textSize="15sp" />

                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5sp"
                    android:text="@string/commandAbbrev2"
                    android:textSize="15sp" />

                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5sp"
                    android:text="@string/commandAbbrev3"
                    android:textSize="15sp" />


                <Button
                    android:id="@+id/commandAbbrevCloseButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="end"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>