<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">



                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/commandAbbreviation1" />

                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/commandAbbreviation2" />

                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/commandAbbreviation3" />

                <TextView
                    style="@style/AbbreviationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5sp"
                    android:text="@string/commandAbbreviation5"
                    android:textSize="15sp" />


                <Button
                    android:id="@+id/abbreviationCloseButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:fontFamily="@font/manrope_regular"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="45dp"
                    android:text="@string/ok" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>